// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common - Footer expect to match snapshot in desktop 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorInherit MuiAppBar-positionRelative css-1r0glzu-MuiPaper-root-MuiAppBar-root"
    data-testid="footer"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular css-1cndkqf-MuiToolbar-root"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
        data-testid="footer-links-toolbar"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-1w7ngrt-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12 MuiGrid-grid-md-8 css-1be7yxe-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-a5rdam-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-99yqbw-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-15an7bo"
                >
                  <svg
                    height="100%"
                    width="100%"
                  >
                    max.svg
                  </svg>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.quotes"
                    href="/quotes"
                  >
                    Quotes
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.purchaseApprovals"
                    href="/purchase-approvals"
                  >
                    Purchase Approvals
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.orders"
                    href="/orders"
                  >
                    Orders
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.invoices"
                    href="/invoices"
                  >
                    Invoices
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.previouslyPurchasedProducts"
                    href="/previously-purchased-products"
                  >
                    Previously Purchased Products
                  </a>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-99yqbw-MuiGrid-root"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-crp4h3-MuiTypography-root"
                >
                  Resources
                </h5>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.myAccount"
                    href="/account"
                  >
                    My Account
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-support.help"
                    href="/support"
                  >
                    Help
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.creditForms"
                    href="/credit-forms"
                  >
                    Credit / Forms
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.jobForm"
                    href="/job-form"
                  >
                    Job Form
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.storeFinder"
                    href="/location-search"
                  >
                    Store Finder
                  </a>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-99yqbw-MuiGrid-root"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-crp4h3-MuiTypography-root"
                >
                  About Us
                </h5>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-aboutUs.aboutReece"
                    href="/about"
                  >
                    About Reece
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.worksForYou"
                    href="/works-for-you"
                  >
                    Works For You
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-aboutUs.careers"
                    href="https://careers.reece.com/us"
                    target="_blank"
                  >
                    Careers
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-aboutUs.reeceGroup"
                    href="https://group.reece.com/us"
                    target="_blank"
                  >
                    Reece Group
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-aboutUs.company"
                    href="/company"
                  >
                    Companies
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12 MuiGrid-grid-md-4 css-1rdy40-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-g1hm3j"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-crp4h3-MuiTypography-root"
              >
                Stay Connected
              </h5>
              <div
                class="MuiBox-root css-1ebprri"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-n42lq8-MuiTypography-root-MuiLink-root"
                  data-testid="terms-of-access-footer-linkedin"
                  href="https://www.linkedin.com/company/reeceusa/"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-1iwxml8-MuiSvgIcon-root"
                    data-testid="LinkedInIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiToolbar-root MuiToolbar-regular css-rger9k-MuiToolbar-root"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
      >
        <div
          class="MuiBox-root css-y38ba2"
        >
          <nav
            class="MuiBox-root css-1f7lu2e"
            data-testid="footer-legal-links"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
              data-testid="terms-of-access-footer"
              href="/terms-of-access"
            >
              Terms of Access
            </a>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-174otwr-MuiDivider-root"
            />
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
              data-testid="privacy-policy-footer"
              href="/privacy-policy"
            >
              Privacy Policy
            </a>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-174otwr-MuiDivider-root"
            />
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
              data-testid="terms-of-sale-footer"
              href="/terms-of-sale"
            >
              Terms of Sale
            </a>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-174otwr-MuiDivider-root"
            />
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
              data-testid="do-not-sell-my-info-footer"
              href="/do-not-sell-my-info"
            >
              Do Not Sell My Info
            </a>
          </nav>
          <div
            class="MuiBox-root css-17pfe88"
          >
            © 
            2023 Reece Group. All Rights Reserved
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;

exports[`common - Footer expect to match snapshot in mobile 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorInherit MuiAppBar-positionRelative css-1ur66ku-MuiPaper-root-MuiAppBar-root"
    data-testid="footer"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular css-1cndkqf-MuiToolbar-root"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
        data-testid="footer-links-toolbar"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-1w7ngrt-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12 MuiGrid-grid-md-8 css-1be7yxe-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 css-a5rdam-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h15dvy-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-15an7bo"
                >
                  <svg
                    height="100%"
                    width="100%"
                  >
                    max.svg
                  </svg>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.quotes"
                    href="/quotes"
                  >
                    Quotes
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.purchaseApprovals"
                    href="/purchase-approvals"
                  >
                    Purchase Approvals
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.orders"
                    href="/orders"
                  >
                    Orders
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.invoices"
                    href="/invoices"
                  >
                    Invoices
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.previouslyPurchasedProducts"
                    href="/previously-purchased-products"
                  >
                    Previously Purchased Products
                  </a>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h15dvy-MuiGrid-root"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-crp4h3-MuiTypography-root"
                >
                  Resources
                </h5>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.myAccount"
                    href="/account"
                  >
                    My Account
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-support.help"
                    href="/support"
                  >
                    Help
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.creditForms"
                    href="/credit-forms"
                  >
                    Credit / Forms
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.jobForm"
                    href="/job-form"
                  >
                    Job Form
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.storeFinder"
                    href="/location-search"
                  >
                    Store Finder
                  </a>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-h15dvy-MuiGrid-root"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-crp4h3-MuiTypography-root"
                >
                  About Us
                </h5>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-aboutUs.aboutReece"
                    href="/about"
                  >
                    About Reece
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-common.worksForYou"
                    href="/works-for-you"
                  >
                    Works For You
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-aboutUs.careers"
                    href="https://careers.reece.com/us"
                    target="_blank"
                  >
                    Careers
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-aboutUs.reeceGroup"
                    href="https://group.reece.com/us"
                    target="_blank"
                  >
                    Reece Group
                  </a>
                </div>
                <div
                  class="MuiBox-root css-1ebprri"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-access-footer-aboutUs.company"
                    href="/company"
                  >
                    Companies
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12 MuiGrid-grid-md-4 css-1rdy40-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-1i483mh"
            >
              <h5
                class="MuiTypography-root MuiTypography-h5 css-crp4h3-MuiTypography-root"
              >
                Stay Connected
              </h5>
              <div
                class="MuiBox-root css-1ebprri"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-n42lq8-MuiTypography-root-MuiLink-root"
                  data-testid="terms-of-access-footer-linkedin"
                  href="https://www.linkedin.com/company/reeceusa/"
                  target="_blank"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-1iwxml8-MuiSvgIcon-root"
                    data-testid="LinkedInIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiToolbar-root MuiToolbar-regular css-rger9k-MuiToolbar-root"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
      >
        <div
          class="MuiBox-root css-1lkg5is"
        >
          <nav
            class="MuiBox-root css-1uuazc5"
            data-testid="footer-legal-links"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
              data-testid="terms-of-access-footer"
              href="/terms-of-access"
            >
              Terms of Access
            </a>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-174otwr-MuiDivider-root"
            />
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
              data-testid="privacy-policy-footer"
              href="/privacy-policy"
            >
              Privacy Policy
            </a>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-174otwr-MuiDivider-root"
            />
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
              data-testid="terms-of-sale-footer"
              href="/terms-of-sale"
            >
              Terms of Sale
            </a>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical css-174otwr-MuiDivider-root"
            />
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-10eimqc-MuiTypography-root-MuiLink-root"
              data-testid="do-not-sell-my-info-footer"
              href="/do-not-sell-my-info"
            >
              Do Not Sell My Info
            </a>
          </nav>
          <div
            class="MuiBox-root css-17pfe88"
          >
            © 
            2023 Reece Group. All Rights Reserved
          </div>
        </div>
      </div>
    </div>
  </header>
</div>
`;
